Fix alignment of category menu
Add styling to category menu

--- a/main.css
+++ b/main.css
@@ -619,12 +619,23 @@ section .cta-group {
 }
 .category-menu {
   display: flex;
-  border: 1px solid blue;
+  justify-content: space-evenly;
 }
 
 .category-menu-item {
-   padding: 0.5rem;
+  /* font-size: 0.75rem; */
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 0.5rem;
 }
+
+/* .filters {
+  font-size: 0.75rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 0.5rem;
+  
+} */
 
 
 .project-category {
